Update statistik allgemeines content

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -234,7 +234,7 @@
   <main>
     <h1>Statistik – Allgemeines</h1>
 
-    <h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2>
+    <span class="blue-pull"><h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2></span>
     <p>
       Wichtige Entscheidungen sollen den Stand der verfügbaren
       wissenschaftlichen Evidenz berücksichtigen. Sie sollen nicht allein
@@ -559,7 +559,7 @@ von diesem Effekt betroffen).</p></li>
 </dl>
 
     <li>
-      Systematische und unsystematische Variation der Abhängigen Variable
+      Systematische und unsystematische Variation der abhängigen Variable
       <li>
         Viele statistische Verfahren beruhen auf der Idee der Schätzung von Anteilen systematischer und unsystematischer Variation (an der Gesamtvariation) einer abhängigen Variable (<i>Effektvariation vs. Fehlervariation</i>)
       </li>
@@ -595,6 +595,20 @@ von diesem Effekt betroffen).</p></li>
     </li>
 
   </ul>
+
+
+  <h2 id="Theorie">Theorie</h2>
+
+<p></p>
+<h3>Was ist eine gute Theorie?</h3>
+<br><strong>Kriterien für eine gute Theorie:</strong>
+<ul>
+
+  <li><strong>Logische Konsistenz</strong> (Widerspruchsfreiheit)</li>
+  <li><strong>Sparsamkeit</strong> (Viele Befunde sollen durch möglichst wenige Annahmen erklären)</li>
+</ul>
+
+
 
   </main>
   <footer class="theme-toggle">
