--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -242,7 +242,7 @@
       werden.
     </p>
 
-    <h2 id="wissenschaftliche-guetekriterien">Wissenschaftliche Gütekriterien</h2>
+    <h2 id="wissenschaftliche-guetekriterien"><span class="blue-pull">Wissenschaftliche Gütekriterien</span></h2>
 
     
 <h3> Für Daten (Mess-, Beobachtungsverfahren):</h3>
@@ -293,12 +293,12 @@
 
 
 <br>
-<h3>Deckeneffekt:</h3>
+<h3><span class="blue-pull">Deckeneffekt:</span></h3>
 <p>Eine Briefwaage, die maximal 100 Gramm anzeigen kann, liefert über 100 Gramm immer den gleichen Wert.
 </p>
 <br>
 
-<h3 id="int-valid">Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</h3>
+<h3 id="int-valid"><span class="blue-pull">Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</span></h3>
 
 <ul>
 <li>1) Zufallsstichproben (<strong>Random Sampling</strong>) bewirken <strong>globale Repräsentativität</strong>, sodass die 
