Fix blue-pill class usage

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -234,7 +234,7 @@
   <main>
     <h1>Statistik – Allgemeines</h1>
 
-    <span class="blue-pull"><h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2></span>
+    <span class="blue-pill"><h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2></span>
     <p>
       Wichtige Entscheidungen sollen den Stand der verfügbaren
       wissenschaftlichen Evidenz berücksichtigen. Sie sollen nicht allein
@@ -242,7 +242,7 @@
       werden.
     </p>
 
-    <h2 id="wissenschaftliche-guetekriterien"><span class="blue-pull">Wissenschaftliche Gütekriterien</span></h2>
+    <h2 id="wissenschaftliche-guetekriterien"><span class="blue-pill">Wissenschaftliche Gütekriterien</span></h2>
 
     
 <h3> Für Daten (Mess-, Beobachtungsverfahren):</h3>
@@ -293,12 +293,12 @@
 
 
 <br>
-<h3><span class="blue-pull">Deckeneffekt:</span></h3>
+<h3><span class="blue-pill">Deckeneffekt:</span></h3>
 <p>Eine Briefwaage, die maximal 100 Gramm anzeigen kann, liefert über 100 Gramm immer den gleichen Wert.
 </p>
 <br>
 
-<h3 id="int-valid"><span class="blue-pull">Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</span></h3>
+<h3 id="int-valid"><span class="blue-pill">Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</span></h3>
 
 <ul>
 <li>1) Zufallsstichproben (<strong>Random Sampling</strong>) bewirken <strong>globale Repräsentativität</strong>, sodass die 
