Preload matrix audio and add hypotheses page

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
+  <link rel="preload" as="audio" href="/audio/matrix.wav">
 </head>
 <body data-rain-fixed="1" data-neo="wake">
 
