--- a/statistik.html
+++ b/statistik.html
@@ -87,6 +87,7 @@ a:hover{
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
+  <link rel="preload" as="audio" href="/audio/matrix.wav">
 </head>
 <body>
   <canvas id="rain"></canvas>
@@ -135,6 +136,8 @@ a:hover{
     <ul class="toc">
     <li>
     <a href="statistik/allgemeines.html">Allgemeines</a>
+    <li>
+    <a href="statistik/hypothesen-variablen.html">Hypothesen &amp; Variablen</a>
     <li>
 </ul>
   </main>
