--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Allgemeines zur Statistik</title>
+  <title>Hypothesen &amp; Variablen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root{
@@ -233,7 +233,7 @@
   </a>
 
   <main>
-    <h1>Statistik – Allgemeines</h1>
+    <h1>Hypothesen &amp; Variablen</h1>
 
     <span class="blue-pill"><h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2></span>
     <p>
