--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -91,6 +91,7 @@
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
+  <link rel="preload" as="audio" href="/audio/matrix.wav">
 </head>
 <body class="white-rabbit" data-neo="knock">
   <canvas id="rain"></canvas>
