Update statistik pages

--- a/statistik.html
+++ b/statistik.html
@@ -135,9 +135,9 @@ a:hover{
 
     <ul class="toc">
     <li>
-    <a href="statistik/allgemeines.html">Allgemeines</a>
+    <a href="statistik/allgemeines.html">Kapitel 1) Allgemeines</a>
     <li>
-    <a href="statistik/hypothesen-variablen.html">Hypothesen &amp; Variablen</a>
+    <a href="statistik/hypothesen-variablen.html">Kapitel 2) Hypothesen &amp; Variablen</a>
     <li>
 </ul>
   </main>
