--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -235,7 +235,7 @@
   <main>
     <h1>Statistik – Allgemeines</h1>
 
-    <span class="blue-pill"><h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2></span>
+    <h2 id="evidenzbasiertes-handeln"><span class="blue-pill"></span>Evidenzbasiertes Handeln</span></h2>
     <p>
       Wichtige Entscheidungen sollen den Stand der verfügbaren
       wissenschaftlichen Evidenz berücksichtigen. Sie sollen nicht allein
