--- a/statistik.html
+++ b/statistik.html
@@ -57,6 +57,8 @@ a:hover{
   margin-top:18px;
   text-align:center;
   opacity:.9;
+  list-style: none;
+  padding: 0;
 }
 
 .toc-label{
@@ -134,12 +136,9 @@ a:hover{
     <h1>Statistik</h1>
 
     <ul class="toc">
-    <li>
-    <a href="statistik/allgemeines.html">Kapitel 1) Allgemeines</a>
-    <li>
-    <a href="statistik/hypothesen-variablen.html">Kapitel 2) Hypothesen &amp; Variablen</a>
-    <li>
-</ul>
+      <li><a href="statistik/allgemeines.html">Kapitel 1) Allgemeines</a></li>
+      <li><a href="statistik/hypothesen-variablen.html">Kapitel 2) Hypothesen &amp; Variablen</a></li>
+    </ul>
   </main>
   <script src="rain.js"></script>
   <script src="bookmarks.js"></script>
