Left-align statistik toc

--- a/statistik.html
+++ b/statistik.html
@@ -55,7 +55,7 @@ a:hover{
 /* TOC */
 .toc{
   margin-top:18px;
-  text-align:center;
+  text-align:left;
   opacity:.9;
   list-style: none;
   padding: 0;
