Clean up statistik list markup

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -499,14 +499,12 @@ von diesem Effekt betroffen).</p></li>
     </tr>
     </tbody>
     </table>
-    <tr>
-      <strong>Legende:</strong>
-<dl>
-  <dt>O = Messung</dt>
-  <dt>X = Intervention; Ereignis</dt>
-  <dt>G = Gruppe</dt>
-</dl>
-    </tr>
+    <p><strong>Legende:</strong></p>
+    <dl>
+      <dt>O = Messung</dt>
+      <dt>X = Intervention; Ereignis</dt>
+      <dt>G = Gruppe</dt>
+    </dl>
     </li>
     <li>
       Between-Subjects Designs (Zwischensubjekt Design) Beispiele:
@@ -548,31 +546,30 @@ von diesem Effekt betroffen).</p></li>
     </tr>
     </tbody>
     </table>
+    <p><strong>Legende:</strong></p>
+    <dl>
+      <dt>O = Messung</dt>
+      <dt>X = Intervention; Ereignis</dt>
+      <dt>G = Gruppe</dt>
+      <dt>R = Randomisierung</dt>
+    </dl>
     </li>
-
-
-<strong>Legende:</strong>
-<dl>21
-  <dt>O = Messung</dt>
-  <dt>X = Intervention; Ereignis</dt>
-  <dt>G = Gruppe</dt>
-  <dt>R = Randomisierung</dt>
-</dl>
 
     <li>
       <h3><span class="blue-pill">Systematische und unsystematische Variation der abhängigen Variable</span></h3>
-      <li>
-        Viele statistische Verfahren beruhen auf der Idee der Schätzung von Anteilen systematischer und unsystematischer Variation (an der Gesamtvariation) einer abhängigen Variable (<i>Effektvariation vs. Fehlervariation</i>)
-      </li>
-      <li>
-        <strong><span class="red-pill">Unsystematische Variation</strong> (Rauschen) geht zurück auf Messfehler oder individuelle Unterschiede der Untersuchungseinheit</span>
-      </li>
-      <li>
-        <strong><span class="red-pill">Systematische Variation</strong> (Signal) geht zurück auf die unabhängige Variable (<i>Treatment</i>) oder auf Störvariablen (<i>Confounder</i>*)</span>
-      <br><small>Beispiel: Das Tragen von Masken oder hohe Außentemperaturen stellen alternative Erklärungen - neben social Distancing - für eine Verringerung der COVID-19-Infiziertenzahlen dar.</small>
-      </li>
+      <ul>
+        <li>
+          Viele statistische Verfahren beruhen auf der Idee der Schätzung von Anteilen systematischer und unsystematischer Variation (an der Gesamtvariation) einer abhängigen Variable (<i>Effektvariation vs. Fehlervariation</i>)
+        </li>
+        <li>
+          <strong><span class="red-pill">Unsystematische Variation</strong> (Rauschen) geht zurück auf Messfehler oder individuelle Unterschiede der Untersuchungseinheit</span>
+        </li>
+        <li>
+          <strong><span class="red-pill">Systematische Variation</strong> (Signal) geht zurück auf die unabhängige Variable (<i>Treatment</i>) oder auf Störvariablen (<i>Confounder</i>*)</span>
+          <br><small>Beispiel: Das Tragen von Masken oder hohe Außentemperaturen stellen alternative Erklärungen - neben social Distancing - für eine Verringerung der COVID-19-Infiziertenzahlen dar.</small>
+        </li>
+      </ul>
     </li>
-    </p>
 </ul>
 
 <h3><strong>Deduktion und Induktion</strong></h3>
