--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -235,12 +235,31 @@
   <main>
     <h1>Hypothesen &amp; Variablen</h1>
 
-    <span class="blue-pill"><h2 id="evidenzbasiertes-handeln">Evidenzbasiertes Handeln</h2></span>
+    <h2 id="wissenschaftliche-hypothese"><span class="blue-pill"></span>Wissenschaftliche Hypothese</span></h2>
     <p>
-      Wichtige Entscheidungen sollen den Stand der verfügbaren
-      wissenschaftlichen Evidenz berücksichtigen. Sie sollen nicht allein
-      aufgrund Erfahrung und subjektiver Einschätzungen getroffen
-      werden.
+      <h2 id="fragen">Rekapitulation</h2>
+
+<table class="legend-table" style="--key-col: 50%;">
+    <thead>
+      <tr><th><strong>Eine Hypothese...</strong></th></tr>
+    </thead>
+    <tbody>
+      <tr><td>x</td>
+          <td>x</td></tr>
+      
+      <tr><td>x</td>
+          <td>x</td></tr>
+
+      <tr><td>x</td>
+          <td>x</td></tr>
+
+      <tr><td>x</td>
+          <td>x</td></tr>
+
+      <tr><td>x</td>
+          <td>x</td></tr>
+    </tbody>
+</table>
     </p>
 
     <h2 id="wissenschaftliche-guetekriterien"><span class="blue-pill">Wissenschaftliche Gütekriterien</span></h2>
@@ -499,14 +518,12 @@ von diesem Effekt betroffen).</p></li>
     </tr>
     </tbody>
     </table>
-    <tr>
-      <strong>Legende:</strong>
-<dl>
-  <dt>O = Messung</dt>
-  <dt>X = Intervention; Ereignis</dt>
-  <dt>G = Gruppe</dt>
-</dl>
-    </tr>
+    <p><strong>Legende:</strong></p>
+    <dl>
+      <dt>O = Messung</dt>
+      <dt>X = Intervention; Ereignis</dt>
+      <dt>G = Gruppe</dt>
+    </dl>
     </li>
     <li>
       Between-Subjects Designs (Zwischensubjekt Design) Beispiele:
@@ -548,31 +565,30 @@ von diesem Effekt betroffen).</p></li>
     </tr>
     </tbody>
     </table>
+    <p><strong>Legende:</strong></p>
+    <dl>
+      <dt>O = Messung</dt>
+      <dt>X = Intervention; Ereignis</dt>
+      <dt>G = Gruppe</dt>
+      <dt>R = Randomisierung</dt>
+    </dl>
     </li>
-
-
-<strong>Legende:</strong>
-<dl>21
-  <dt>O = Messung</dt>
-  <dt>X = Intervention; Ereignis</dt>
-  <dt>G = Gruppe</dt>
-  <dt>R = Randomisierung</dt>
-</dl>
 
     <li>
       <h3><span class="blue-pill">Systematische und unsystematische Variation der abhängigen Variable</span></h3>
-      <li>
-        Viele statistische Verfahren beruhen auf der Idee der Schätzung von Anteilen systematischer und unsystematischer Variation (an der Gesamtvariation) einer abhängigen Variable (<i>Effektvariation vs. Fehlervariation</i>)
-      </li>
-      <li>
-        <strong><span class="red-pill">Unsystematische Variation</strong> (Rauschen) geht zurück auf Messfehler oder individuelle Unterschiede der Untersuchungseinheit</span>
-      </li>
-      <li>
-        <strong><span class="red-pill">Systematische Variation</strong> (Signal) geht zurück auf die unabhängige Variable (<i>Treatment</i>) oder auf Störvariablen (<i>Confounder</i>*)</span>
-      <br><small>Beispiel: Das Tragen von Masken oder hohe Außentemperaturen stellen alternative Erklärungen - neben social Distancing - für eine Verringerung der COVID-19-Infiziertenzahlen dar.</small>
-      </li>
+      <ul>
+        <li>
+          Viele statistische Verfahren beruhen auf der Idee der Schätzung von Anteilen systematischer und unsystematischer Variation (an der Gesamtvariation) einer abhängigen Variable (<i>Effektvariation vs. Fehlervariation</i>)
+        </li>
+        <li>
+          <strong><span class="red-pill">Unsystematische Variation</strong> (Rauschen) geht zurück auf Messfehler oder individuelle Unterschiede der Untersuchungseinheit</span>
+        </li>
+        <li>
+          <strong><span class="red-pill">Systematische Variation</strong> (Signal) geht zurück auf die unabhängige Variable (<i>Treatment</i>) oder auf Störvariablen (<i>Confounder</i>*)</span>
+          <br><small>Beispiel: Das Tragen von Masken oder hohe Außentemperaturen stellen alternative Erklärungen - neben social Distancing - für eine Verringerung der COVID-19-Infiziertenzahlen dar.</small>
+        </li>
+      </ul>
     </li>
-    </p>
 </ul>
 
 <h3><strong>Deduktion und Induktion</strong></h3>
@@ -633,8 +649,8 @@ von diesem Effekt betroffen).</p></li>
 
       <tr><td>Wissenschaftliche Gütekriterien gibt es für Messungen und Ergebnisse (<i>Effektaussagen</i>). Erläutern Sie diese!</td>
           <td>Für Messungen gelten die Gütekriterien Objektivität, Reliabilität und Validität.
-Objektivität bedeutet Unabhängigkeit vom Untersucher, Reliabilität beschreibt die Zuverlässigkeit der Messung, und Validität gibt an, ob tatsächlich das gemessen wird, was gemessen werden soll.
-Für Effektaussagen sind interne und externe Validität zentral. Interne Validität beschreibt, ob ein Effekt kausal auf die unabhängige Variable zurückzuführen ist, externe Validität die Übertragbarkeit der Ergebnisse.</td></tr>
+              Objektivität bedeutet Unabhängigkeit vom Untersucher, Reliabilität beschreibt die Zuverlässigkeit der Messung, und Validität gibt an, ob tatsächlich das gemessen wird, was gemessen werden soll.
+              Für Effektaussagen sind interne und externe Validität zentral. Interne Validität beschreibt, ob ein Effekt kausal auf die unabhängige Variable zurückzuführen ist, externe Validität die Übertragbarkeit der Ergebnisse.</td></tr>
 
       <tr><td>Von welchen Faktoren hängen die interale und externale Validität einer Untersuchung ab?</td>
           <td>Die internale Validität hängt von der Kontrolle von Störvariablen, Randomisierung und dem Versuchsdesign ab. Die externale Validität hängt von der Repräsentativität der Stichprobe, der Realitätsnähe der Untersuchung und den Untersuchungsbedingungen ab.</td></tr>
