Update hypothesen-variablen content

--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -257,28 +257,30 @@
     </tbody>
 </table>
     </p>
+<br>
 
 <table class="legend-table" style="--key-col: 50%;">
     <thead>
-      <tr><th><strong>Beispiele für gute und schlechte Hypothesen:</strong></th></tr>
+      <tr><th><strong>Beispiele für gute und schlechte Hypothesen</strong></th></tr>
     </thead>
     <tbody>
-      <tr><td>x</td>
-          <td>x</td></tr>
-      <tr><td>x</td>
-          <td>x</td></tr>
+      <tr><td>Frustierte Menschen sind aggressiver</td>
+          <td>bedingt gut; überprüfbar, aber Begriffe unschaft (<i>frustriert</i>,<i>aggresiv</i>) &#10004;</td></tr>
+
+      <tr><td>Was ist die beliebteste Figur der Sesamstraße?</td>
+          <td>keine Hypothese; Frage. Nicht falsifizierbar. &#10008;</td></tr>
           
-          <tr><td>x</td>
-          <td>x</td></tr>
+      <tr><td>Kinder, die regelmäßig die Sesamstraße schauen, werden zu neugierigen Erwachsenen</td>
+          <td>bedingt gut; Wenn-dann-Struktur, aber unpräzise (<i>regelmäßig</i>, <i>neugierig</i>) &#10004;</td></tr>
 
-          <tr><td>x</td>
-          <td>x</td></tr>
+      <tr><td>Frauen sind kreativer als Männer</td>
+          <td>problematisch; grundsätzlich prüfbar, aber zu allgemein und zu unscharf &#10008;</td></tr>
 
-          <tr><td>x</td>
-          <td>x</td></tr>
+      <tr><td>Mit zunehmender Belastung steigt die Beanspruchung</td>
+          <td>gut; klarer Zusammenhang, überprüfbar und falsifizierbar &#10004;</td></tr>
 
-          <tr><td>x</td>
-          <td>x</td></tr>
+      <tr><td>Zigarettenkonsum kann zum Herzinfarkt führen</td>
+          <td>eher schlecht; <i>kann</i> zu vage, keine klare Hypothesenformulierung</td></tr>
 
     </tbody>
 </table>
