Update hypothesen-variablen content

--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -286,25 +286,42 @@
 </table>
 
 
-    <h2 id="wissenschaftliche-guetekriterien"><span class="blue-pill">Wissenschaftliche Gütekriterien</span></h2>
+    <h2 id="arten-von-hypothesen">Arten von Hypothesen</h2>
 
-    
-<h3> <span class="blue-pill">Für Daten</span> (Mess-, Beobachtungsverfahren):</h3>
     <dl>
-  <dt>Reliabität</dt>
-  <dd>Sind die Daten reproduzierbar? Liegen die Werte bei Messwiederholung
-    nahe beieinander? (Fadenkreuz: Präzision)
+  <dt>Hypothesen richten sich auf Zusammenhänge oder Unterschiede</dt>
+  <dd>
+    <strong>A</strong> Männer verdienen mehr als Frauen. <i><strong>Unterschied</strong></i>
+  </dd>
+  <dd>
+    <strong>C</strong> Je höher die Abiturnote, desto höher die Abschlussnote im Studium. <i><strong>Zusammenhang</strong></st></i>
   </dd>
 
-  <dt>Validität</dt>
-  <dd>Wie gut repräsentieren die erzeugten Werte die zu messende Größe (das 
-    Konstrukt)? (Fadenkreuz: Genauigkeit)
+  <dt>Hypothesen können ungerichtet sein</dt>
+  <dd>
+    <strong>B</strong> Männer und Frauen haben unterschiedliche Einkommen. <i><strong>Unterschied</strong></i>
   </dd>
 
-  <dt>Objektivität</dt>
-  <dd>Sind die Werte von den messenden Personen unabhängig?
+  <dd>
+    <strong>D</strong> Abiturnote und Studiennote hängen zusammen. <i><strong>Zusammenhang</strong></i>
   </dd>
 </dl>
+
+<p><i>Die Spezifität (Aussagekraft) der Hypothese wird dadurch beeinflusst. (A hat die höchste, D die niedrigste Spezifität)</i>
+  </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <h3> <span class="blue-pill">Für Effekte</span> (Wirkungsaussagen):</h3>
