Update hypothesen-variablen content

--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -419,6 +419,35 @@
 
 
 
+<h2 id="operationalisierung-von-variablen">Operationalisierung von Variablen</h2>
+
+<dl>
+  <dd>
+      Operationalisierung bedeutet, theoretische Begriffe in messbare Variablen zu übersetzen.
+  </dd>
+</dl>
+
+<table class="legend-table" style="--key-col: 50%;">
+    <thead>
+        <tr><th>Das Überbrückungsproblem</th></tr>
+    </thead>
+  <tbody>
+    <tr><td>
+      <ul>
+        <li>
+            Forschungsidee &rarr; Explikation der Forschungsfrage &rarr; Hypothesenbildung &rarr; <strong>Operationalisierung</strong> (Prädiktoren) &rarr; Datenerhebung &rarr; Datenanalyse
+        </li>
+      </ul>
+    </td></tr>
+  </tbody>
+</table>
+
+
+
+
+
+
+
 
 
 
