Update hypothesen-variablen content

--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -432,15 +432,57 @@
         <tr><th>Das Überbrückungsproblem</th></tr>
     </thead>
   <tbody>
+    <tr><td>      
+            Forschungsidee &rarr; Explikation der Forschungsfrage &rarr; Hypothesenbildung &rarr; <strong>Operationalisierung</strong> (Prädiktoren) &rarr; Datenerhebung &rArr; Datenanalyse
+    </td></tr>
     <tr><td>
+      <strong>Analytische Definitionen (<i>Begriffsklärung</i>) von abstrakten Begriffen, Modellen oder Ideen</strong>
+      <br><small>Zum Beispiel "Stress", "Motivation", "Aggression"</small>
       <ul>
-        <li>
-            Forschungsidee &rarr; Explikation der Forschungsfrage &rarr; Hypothesenbildung &rarr; <strong>Operationalisierung</strong> (Prädiktoren) &rarr; Datenerhebung &rarr; Datenanalyse
-        </li>
+          <li>
+              Literaturrecherche: Was genau bedeutet <i>Stress</i>?
+          </li>
+          <li>
+              Keine Alltagssprache!
+          </li>
+          <li>
+              Ursache, Wirkung, Mediation, Moderation, usw.
+          </li>
+      </ul>
+    <tr><td>
+      <strong>Operationalisierung (<i>Merkmale, Variablen</i>): Wie messen wir "Stress" konkret?</strong>
+      <br><small>Zum Beispiel Cortisolwert, Skala im Fragebogen</small>
+      <ul>
+          <li>
+              Messvorschriften, Messstrategien
+          </li>
+          <li>
+              Herrstellungsregeln in Bezug auf Interventionen
+          </li>          
       </ul>
     </td></tr>
   </tbody>
 </table>
+
+
+
+<table class="legend-table" style="--key-col: 50%;">
+  <thead>
+    <tr><th>
+            Beispiel für Fragestellungen
+    </th></tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+
+      </td>
+    </tr>
+    
+  </tbody>
+</table>
+
+
 
 
 
