Update hypothesen-variablen content

--- a/statistik/hypothesen-variablen.html
+++ b/statistik/hypothesen-variablen.html
@@ -464,18 +464,32 @@
   </tbody>
 </table>
 
+<p><small>Das Überbrückungsproblem beschreibt die Schwierigkeit, theoretische Begriffe so zu definieren und zu operationalisieren, dass sie empirisch messbar werden.</small></p>
 
 
 <table class="legend-table" style="--key-col: 50%;">
   <thead>
     <tr><th>
-            Beispiel für Fragestellungen
+            <h3>Beispiel für Fragestellungen</h3>
     </th></tr>
   </thead>
   <tbody>
     <tr>
       <td>
-
+          <ul>
+            <li>
+                Der Begriff "operationale Definition" geht auf Bridgeman (1927) zurück. Er vertrat eine strenge Sichtweise, wonach theoretische Begriffe vollständig auf Beobachtungsbegriffe zurückgeführt werden müssen. Dies hat sich jedoch nicht durchgesetzt. Theorien wird demnach ein Bedeutungsüberschuss zuerkannt, der insbesondere innovative Entdeckungen ermöglicht.
+            </li>
+            <li>
+                in der Regel gibt es mehrere Möglichkeiten zur Operationalisierung eines Begriffs/Merkmals. Abhängige Variablen werden häufig als <strong>Häufigkeit</strong>, <strong>Reaktionszeit</strong>, <strong>Reaktionsdauer</strong>, <strong>Reaktionsstärke</strong> oder <strong>Wahlreaktion</strong> operationalisiert: <i>Die abhängige Variable soll möglichst sensibel und reliabel auf die Variation der unabhägigen Variable reagieren</i>.
+            </li>
+            <li>
+                Führen verschiedene Operationalisierungen zu unterschiedlichen Ergebnissen, ist dies ein Hinweis darauf, dass der Begriff/das Merkmal mehrdeutig und (noch) nicht hinreichend verstanden ist. Die Messungen sind dann möglicherweise nicht valide.
+            </li>
+            <li>
+                Analyse von Personenströmen bei Gebäuderäumungen
+            </li>
+          </ul>
       </td>
     </tr>
     
