Add Candle privacy policy

--- a/candle.html
+++ b/candle.html
@@ -146,20 +146,12 @@
 
   <main>
     <h1>Candle</h1>
-    <p>Eine kleine Seite fuer einen ruhigen Loop: Licht, Fokus, Reset.</p>
-
-    <h2>Ritual</h2>
-    <p>Ein Satz, ein Atemzug, eine Flamme. Kurz, klar, wiederholbar.</p>
-
-    <h2>Logbuch</h2>
-    <ul class="candle-list">
-      <li>Start: Raum dunkel, Bildschirm leise.</li>
-      <li>Fokus: ein Task, ein Timer, keine Ablenkung.</li>
-      <li>Ende: Notiz, naechster Schritt, Reset.</li>
-    </ul>
-
-    <h2>Notiz</h2>
-    <p>Wenn du willst, erweitere diese Seite spaeter um eigene Regeln oder Tagesmarker.</p>
+    <h2>Datenschutzerklaerung</h2>
+    <p>Die App „Candle“ erhebt, speichert oder verarbeitet keine personenbezogenen Daten.</p>
+    <p>Es werden keine Nutzerkonten angelegt, keine Tracking-Tools eingesetzt<br>und keine Daten an Dritte weitergegeben.</p>
+    <p>Die App funktioniert vollstaendig offline.<br>Falls eine Internetverbindung genutzt wird (z. B. fuer Systemfunktionen),<br>erfolgt dies ausschliesslich ueber die vom Betriebssystem bereitgestellten Schnittstellen.</p>
+    <p>Verantwortlich:<br>Maximilian Hannappel<br>E-Mail: maximilian.hannappel@e.mail.de</p>
+    <p>Stand: Januar 2026</p>
   </main>
   </div>
 
