Disable Neo overlay on Candle

--- a/candle.html
+++ b/candle.html
@@ -100,7 +100,7 @@
   <link rel="stylesheet" href="neo.css">
   <link rel="preload" as="audio" href="/audio/matrix.wav">
 </head>
-<body class="candle-page" data-neo="ember">
+<body class="candle-page">
   <canvas id="rain"></canvas>
 
   <nav class="home-only">
