Translate Candle privacy policy to English

--- a/candle.html
+++ b/candle.html
@@ -146,12 +146,12 @@
 
   <main>
     <h1>Candle</h1>
-    <h2>Datenschutzerklaerung</h2>
-    <p>Die App „Candle“ erhebt, speichert oder verarbeitet keine personenbezogenen Daten.</p>
-    <p>Es werden keine Nutzerkonten angelegt, keine Tracking-Tools eingesetzt<br>und keine Daten an Dritte weitergegeben.</p>
-    <p>Die App funktioniert vollstaendig offline.<br>Falls eine Internetverbindung genutzt wird (z. B. fuer Systemfunktionen),<br>erfolgt dies ausschliesslich ueber die vom Betriebssystem bereitgestellten Schnittstellen.</p>
-    <p>Verantwortlich:<br>Maximilian Hannappel<br>E-Mail: maximilian.hannappel@e.mail.de</p>
-    <p>Stand: Januar 2026</p>
+    <h2>Privacy Policy</h2>
+    <p>The app "Candle" does not collect, store, or process any personal data.</p>
+    <p>No user accounts are created, no tracking tools are used<br>and no data is shared with third parties.</p>
+    <p>The app works completely offline.<br>If an internet connection is used (e.g., for system functions),<br>this happens exclusively via the interfaces provided by the operating system.</p>
+    <p>Responsible:<br>Maximilian Hannappel<br>Email: maximilian.hannappel@e.mail.de</p>
+    <p>Last updated: January 2026</p>
   </main>
   </div>
 
